// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [ 'github', 'twitter', 'line' ], customRoles: [ 'administrator' ], dataApi: { rest: '/rest', graphql: '/graphql' } } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'
  | 'administrator'

// Auth Feature
/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'github'
  | 'twitter'
  | 'line'

// Data API (preview) Feature
/**
 * Data API (REST) response
 * @see https://learn.microsoft.com/azure/data-api-builder/rest#result-set-format
 */
type RestResult<T extends {}> = { value: T[] }

/**
 * Data API (GraphQL) response
 * @see https://learn.microsoft.com/azure/data-api-builder/graphql#resultset-format
 */
type GraphQLResult<T extends {}> = { data: T }
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [], customRoles: [], dataApi: false } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { customRoles: [], dataApi: { rest: '/rest', graphql: '/graphql' }, authProviders: [ 'aad', 'github' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'

// Auth Feature
/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'aad'
  | 'github'

// Data API (preview) Feature
/**
 * Data API (REST) response
 * @see https://learn.microsoft.com/azure/data-api-builder/rest#result-set-format
 */
type RestResult<T extends {}> = { value: T[] }

/**
 * Data API (GraphQL) response
 * @see https://learn.microsoft.com/azure/data-api-builder/graphql#resultset-format
 */
type GraphQLResult<T extends {}> = { data: T }
"
`;
